# graphql-python-client-generator

./: .coverage  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  gqlpycgencli.py  justfile  pylintrc  pyproject.toml  requirements-test.pip  requirements.pip  run-tests.sh  setup.py
gqlpycgen/: __init__.py  api.py  client.py  loader.py  models.py  utils.py
htmlcov/: gqlpycgen___init___py.html  gqlpycgen_client_py.html  gqlpycgen_loader_py.html  gqlpycgen_models_py.html  gqlpycgen_utils_py.html  index.html  status.json
tests/: test_client.py
