[project]
name = "wf-gqlpycgen"
dynamic = ["version"]

[tool.poetry]
name = "wf-gqlpycgen"
version = "0.7.4"
description = ""
authors = ["Paul DeCoursey <paul.decoursey@wildflowerschools.org>"]
maintainers = ["Benjamin Jaffe-Talberg <ben.talberg@wildflowerschools.org>"]
readme = "README.md"
keywords = []
repository = "https://github.com/Wildflowerschools/graphql-python-client-generator"
license = "MIT"
packages = [{include = "gqlpycgen"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
toml = "^0.10.2"
jinja2 = "^3.1.2"
click = "^8.1.3"
requests = "^2.28.2"
tenacity = "^8.2.2"
cachetools = "^5.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.0"
coverage = "^7.2.3"
mock = "^5.0.1"
nose = "^1.3.7"
rednose = "^1.3.0"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."console_scripts"]
"gqlpycgen" = "gqlpycgencli:cli"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.setuptools]
py-modules = []

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
